Fix aspect ratio of portrait cropping tool

--- a/css/editor.css
+++ b/css/editor.css
@@ -21,9 +21,8 @@
     overflow: hidden;
     margin: 8px;
     cursor: pointer;
-    background-size: 128px 512px;
     background-repeat: no-repeat;
-    background-position: top;
+    background-position: left top;
     border: 4px solid #DDD;
 }
 
